syntax = "proto3";

package cron_server;
option go_package = "./v1;v1";

import "validate/validate.proto";
import "google/protobuf/struct.proto";

message Log{
  uint32 id = 1;
  string uuid = 2;
  uint32 worker_id = 3;
  string worker_snapshot = 4;
  uint32 task_id = 5;
  string task_snapshot = 6;
  int64  start = 7;
  int64  end = 8;
  string content = 9;
  string status = 10;
}

message PageLogRequest{
  uint32 page = 1[(validate.rules).uint32 = {gt:0}];
  uint32 page_size = 2[(validate.rules).uint32 = {lte:100}];
  uint32 task_id = 3[(validate.rules).uint32 = {gt:0}];
}

message PageLogReply{
  uint32 total = 1;
  repeated Log list = 2;
}

message GetLogRequest{
  uint32 id = 1;
}
